feat: react csv templates for csv serialization (#22)
* feat: react csv templates for csv serialization
- using template model
- update tests

* feat: react csv templates for csv serialization
- using template model
- update tests

* feat: react csv templates for csv serialization
- using template model
- update tests

* feat: add fallback template
- use fallback template when it fails to validate the parsed transactions

* fix: change the sign of amount for minance formatted data

---------

Co-authored-by: ydeng <dengyujun11@gmail.com>